購物車修改add 新增delete

--- a/WebContent/front_end/mall/mall_index.html
+++ b/WebContent/front_end/mall/mall_index.html
@@ -159,6 +159,7 @@
   <script src="assets/assets_546/js/accordions.js"></script>
 
   <!-- 我自己的JS -->
+  <script src="vendor\vendors_shoppingCart\jquery\jquery-3.6.0.min.js"></script>
   <script src="js/mall_index.js"></script>
 
 
