修改購物車相關程式碼

--- a/WebContent/front_end/mall/mall_index.html
+++ b/WebContent/front_end/mall/mall_index.html
@@ -46,7 +46,7 @@
         <a href="#">Home</a>
         <a href="#">線上商城</a>
         <a href="#"><img src="images/heart.png"></a>
-        <a href="#"><i style="color: white; font-size: 23px;" class="fas fa-shopping-cart"></i></a>
+        <a href="/TFA104G5/front_end/mall/shoppingCart01.jsp"><i style="color: white; font-size: 23px;" class="fas fa-shopping-cart"></i></a>
         <a href="#">註冊</a>
         <a href="#">登入</a>
         <a href="#"> <i class="fas fa-user"></i></a>
