調整購物車

--- a/WebContent/front_end/mall/mall_index.html
+++ b/WebContent/front_end/mall/mall_index.html
@@ -100,11 +100,11 @@
 
   <!-- 熱銷商品 -->
 
-  <div class="latest-products" style="margin-top: 50px;">
+  <div class="latest-products" style="margin-top: 30px;">
     <div class="container">
       <div class="row hotProducts">
         <!-- 熱銷商品 -->
-        <div class="col-md-12">
+        <div class="col-md-12" style="margin-bottom: -50px;">
           <div class="section-heading">
             <h2>熱銷商品</h2>
             <a href="mall_products_list.html">全部商品 <i class="fa fa-angle-right"></i></a>
@@ -120,11 +120,11 @@
 
   <!-- 最新上架 -->
 
-  <div class="latest-products" style="margin-top: 50px;">
+  <div class="latest-products" style="margin-top: 30px;">
     <div class="container">
       <div class="row latestProducts">
         <!-- 最新上架商品 -->
-        <div class="col-md-12">
+        <div class="col-md-12" style="margin-bottom: -50px;">
           <div class="section-heading">
             <h2>最新上架</h2>
             <a href="mall_products_list.html">全部商品 <i class="fa fa-angle-right"></i></a>
