--- a/WebContent/front_end/mall/mall_products_list.html
+++ b/WebContent/front_end/mall/mall_products_list.html
@@ -103,6 +103,15 @@
               <!-- 商品類別 -->
               <li class="active" data-productTypeId="0">全部商品</li>
             </ul>
+            <select class="company" style="border-radius: 20px; border: 2px solid #d7ab75; margin-top: 10px;">
+              <option selected value="0">全部廠商</option>
+              <!-- 動態增加 -->
+              <option value="1">最新上架</option>
+              <option value="2">最高評價</option>
+              <option value="3">價格:低到高</option>
+              <option value="4">價格:高到低</option>
+              <!-- 動態增加 -->
+            </select>
             <select class="orderBy" style="border-radius: 20px; border: 2px solid #d7ab75; margin-top: 10px;">
               <option selected value="1">最熱門</option>
               <option value="2">最新上架</option>
