--- a/WebContent/front_end/camp/camp_index.html
+++ b/WebContent/front_end/camp/camp_index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>第五組專案</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet" />
-    <link href="front_end/camp/css/templatemo-style.css" rel="stylesheet" />
+    <link href="css/templatemo-style.css" rel="stylesheet" />
 
     <!-- -----------------------------------------我自己家的優------------------------------------- -->
 
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- 下面是大圖輪播的css -->
     <link rel="stylesheet" href="util/woocommerce-FlexSlider-690832b/flexslider.css" type="text/css">
-    <link rel="stylesheet" href="front_end/camp/css/index.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
     <!-- googlefont -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
